[Aniruddha]: update some services